--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </main>
 
     {%- include footer.html -%}
-    <script src="{{ "/assets/js/scripts.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/main.js" | relative_url }}"></script>
   </body>
 
 </html>
